2011-07-25  Dan Bernstein  <mitz@apple.com>

        Fix the build by committing a rename in this file that I neglected to include in the previous commit.

        * css/CSSFontFaceSource.h:

2011-07-25  Dan Bernstein  <mitz@apple.com>

        <rdar://problem/9835028> Font loading during layout can cause layout code to be re-entered via resource load delegate
        https://bugs.webkit.org/show_bug.cgi?id=65123

        Reviewed by Anders Carlsson and Darin Adler.

        Since CSSFontFaceSource::getFontData() can get called during layout, avoid calling out to loader
        code from under it, and instead defer that work using a zero-delay timer.

        * css/CSSFontFaceSource.cpp:
        (WebCore::CSSFontFaceSource::CSSFontFaceSource):
        (WebCore::CSSFontFaceSource::~CSSFontFaceSource):
        (WebCore::CSSFontFaceSource::getFontData): Rather than starting the font load here, schedule
        a zero-delay timer to do it.
        (WebCore::CSSFontFaceSource::startLoadingTimerFired): Added. Starts loading the font if needed.
        * css/CSSFontFaceSource.h:

2011-07-25  Al Patrick  <apatrick@chromium.org>

        Removed support for the GL_latch_CHROMIUM extension which Chromium no longer supports.
        Replaced calls to SetLatch with calls to Flush since Flush now has barrier semantics in Chromium.
        https://bugs.webkit.org/show_bug.cgi?id=65043

        Reviewed by James Robinson.

        * platform/graphics/chromium/Canvas2DLayerChromium.cpp:
        (WebCore::Canvas2DLayerChromium::updateCompositorResources):
        * platform/graphics/chromium/DrawingBufferChromium.cpp:
        (WebCore::DrawingBuffer::publishToPlatformLayer):
        * platform/graphics/chromium/Extensions3DChromium.h:
        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::LayerRendererChromium):
        (WebCore::LayerRendererChromium::drawLayers):
        (WebCore::LayerRendererChromium::addChildContext):