@@ -1,3 +1,15 @@
+2011-07-25  Ryuan Choi  <ryuan.choi@samsung.com>
+
+        [CMAKE] Split JSC related files from WebCore/CMakeLists.txt
+        https://bugs.webkit.org/show_bug.cgi?id=61350
+
+        Reviewed by Daniel Bates.
+
+        No new tests, just moving jsc related files from CMakeLists.txt to UseJSC.cmake.
+
+        * CMakeLists.txt:
+        * UseJSC.cmake:
+
 2011-07-25  Dan Bernstein  <mitz@apple.com>
 
         Fix the build by committing a rename in this file that I neglected to include in the previous commit.
